# FedMARS

./: .gitignore  README.md  pyproject.toml  requirements.txt
Experimental Evaluation Code Files/: Fedmars_Budget_Sensitivity.ipynb  Fedmars_Client_Level_Behavior.ipynb  Fedmars_Component_Ablation.ipynb  Fedmars_Heterogeneity_Drift_Robustness.ipynb
examples/: compare_baselines.py  quickstart_synthetic.py  run_minimal.py
experiments/: ablation_validation.py  communication_validation.py  fairness_validation.py  full_validation_suite.py  personalization_validation.py  run_grid.py  run_single.py  sweep_heterogeneity.py
experiments/runners/: run_breast_cancer_ditto.py  run_breast_cancer_fedavg.py  run_breast_cancer_feddyn.py  run_breast_cancer_fedmars.py  run_breast_cancer_fedopt.py  run_breast_cancer_fedprox.py  run_breast_cancer_qffl.py  run_breast_cancer_scaffold.py  run_ckd_ditto.py  run_ckd_fedavg.py  run_ckd_feddyn.py  run_ckd_fedmars.py  run_ckd_fedopt.py  run_ckd_fedprox.py  run_ckd_qffl.py  run_ckd_scaffold.py  run_digits_ditto.py  run_digits_fedavg.py  run_digits_feddyn.py  run_digits_fedmars.py  run_digits_fedopt.py  run_digits_fedprox.py  run_digits_qffl.py  run_digits_scaffold.py  run_sonar_ditto.py  run_sonar_fedavg.py  run_sonar_feddyn.py  run_sonar_fedmars.py  run_sonar_fedopt.py  run_sonar_fedprox.py  run_sonar_qffl.py  run_sonar_scaffold.py  (+8 more)
fedmars/: __init__.py  aggregation.py  baselines.py  benchmark.py  config.py  controller.py  core.py  credit.py  data.py  layers.py  mixture.py  partition.py  utils.py
tests/: test_smoke.py
