[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedmars"
version = "0.4.0"
description = "Reference PyTorch implementation of FedMARS, a credit-driven layer-wise federated learning framework."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Safayet Ullah"}]
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
  "scikit-learn>=1.3"
]
keywords = ["federated-learning", "pytorch", "non-iid", "research"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fedmars*"]
